--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: Nice Blog
 name: Nice Blog # your name
-email: youremail@example.com # your email address
+email: gakossomosca@gmail.com # your email address
 description: >
     A Simple Jekyll Blog Theme. # this means to ignore newlines until "baseurl:"
 baseurl: "/Nice_Blog" # the subpath of your site, e.g. /blog
-url: "https://maadrifla.github.io/Nice_Blog" # the base hostname & protocol for your site
+url: "https://maadrifla.github.io" # the base hostname & protocol for your site
 twitter_username: # your Twitter usernam
 github_username: # your Github username
 disqus_username: # your disqus username
