--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ name: Nice Blog # your name
 email: gakossomosca@gmail.com # your email address
 description: >
     A Simple Jekyll Blog Theme. # this means to ignore newlines until "baseurl:"
-baseurl: "Nice_Blog" # the subpath of your site, e.g. /blog
+baseurl: "/Blog" # the subpath of your site, e.g. /blog
 url: "http://maadrifla.github.io" # the base hostname & protocol for your site
 twitter_username: # your Twitter usernam
 github_username: # your Github username
